--- a/public/flavor.html
+++ b/public/flavor.html
@@ -7,8 +7,7 @@
     <meta name="description" content="A visualisation of coffee flavours.">
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="css/flavor.css"  rel="stylesheet" type="text/css"/>
-    <!--script src="js/d3.js"></script-->
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="js/d3.js"></script>
   </head>
   <body>
     <div id="vis">&nbsp;</div>
