--- a/public/flavor.html
+++ b/public/flavor.html
@@ -12,7 +12,7 @@
   <body>
     <div id="vis">&nbsp;</div>
     <script src="js/flavor.js"></script>
-    <script> if (top != self) top.location.replace(location); </script>
+    <!--script> if (top != self) top.location.replace(location); </script-->
   </body>
 </html>
 
