--- a/public/sun.html
+++ b/public/sun.html
@@ -9,7 +9,8 @@
   </style>
 </head>
 <body>
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<!--script src="https://d3js.org/d3.v4.min.js"></script-->
+<script src="js/d3.js"></script>
 <script>
 
   var width = 960,
@@ -34,23 +35,25 @@
     .innerRadius(function(d) { return Math.max(0, y(d.y0)); })
     .outerRadius(function(d) { return Math.max(0, y(d.y1)); });
 
-
-  var svg = d3.select("body").append("svg")
+  var vis = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height)
     .append("g")
     .attr("transform", "translate(" + width / 2 + "," + (height / 2) + ")");
 
-  d3.json("https://gist.githubusercontent.com/mbostock/4348373/raw/85f18ac90409caa5529b32156aa6e71cf985263f/flare.json", function(error, root) {
+  d3.json("json/flare.json", function(error, flare ) {
+
     if (error) throw error;
 
-    root = d3.hierarchy(root);
+    var root = d3.hierarchy(flare);
     root.sum(function(d) { return d.size; });
 
-    console.log( "root", root );
+    var nodes = partition(root).descendants();
 
-    svg.selectAll("path")
-      .data(partition(root).descendants())
+    var path = vis.selectAll("path");
+
+    path
+      .data( nodes )
       .enter().append("path")
       .attr("d", arc)
       .style("fill", function(d) { return color((d.children ? d : d.parent).data.name); })
@@ -60,7 +63,7 @@
   });
 
   function click(d) {
-    svg.transition()
+    vis.transition()
       .duration(750)
       .tween("scale", function() {
         var xd = d3.interpolate(x.domain(), [d.x0, d.x1]),
