--- a/public/flavor.html
+++ b/public/flavor.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Coffee Flavour Wheel</title>
+    <title>Flavor V4</title>
     <meta name="description" content="A visualisation of coffee flavours.">
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="css/flavor.css"  rel="stylesheet" type="text/css"/>
