--- a/public/flavor.v3.html
+++ b/public/flavor.v3.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Coffee Flavor V3</title>
+  <title>Flavor V3</title>
   <meta name="description" content="A visualisation of coffee flavours.">
   <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <link href="css/flavor.css"  rel="stylesheet" type="text/css"/>
-  <script src="//d3js.org/d3.v3.min.js"></script>
+  <script src="js/d3.v3.5.17.js"></script>
 </head>
 <body>
 <div id="vis">&nbsp;</div>
