Friday Created jitter.v3.json

--- a/wheel/flare/flare.html
+++ b/wheel/flare/flare.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sunburst</title>
+  <title>Flare</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
   <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-  <link href="css/sunburst.css"  rel="stylesheet" type="text/css"/>
+  <link href="flare.css"  rel="stylesheet" type="text/css"/>
   <!--script src="js/d3.js"></script-->
   <script src="//d3js.org/d3.v3.min.js"></script>
 </head>
@@ -13,6 +13,6 @@
     <label><input type="radio" name="mode" value="size"> Size</label>
     <label><input type="radio" name="mode" value="count" checked> Count</label>
   </form>
-  <script src="js/sunburst.js"></script>
+  <script src="flare.js"></script>
 </body>
 </html>
