--- a/public/flavor.v4.html
+++ b/public/flavor.v4.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="vis">&nbsp;</div>
-    <script src="js/flavor.js"></script>
+    <script src="js/flavor.v4.js"></script>
     <!--script> if (top != self) top.location.replace(location); </script-->
   </body>
 </html>
