Fri 3/2 Beginning to Work

--- a/jitter.html
+++ b/jitter.html
@@ -17,7 +17,8 @@
   <script src="js/ui/View.js"></script>
   <script src="js/ui/Pane.js"></script>
   <script src="js/d3d/D3D.js"></script>
-  <script src="js/util/Jitter.js"></script>
+  <script src="js/jitter/Jitter.js"></script>
+  <script src="js/jitter/Page.js"></script>
   <!--script src="js/wheel/flavor.v3.js"></script-->
 </head>
 <body>
