Sat 3/3 Created class for each Jitter Pane, much improve layout

--- a/jitter.html
+++ b/jitter.html
@@ -19,6 +19,15 @@
   <script src="js/d3d/D3D.js"></script>
   <script src="js/jitter/Jitter.js"></script>
   <script src="js/jitter/Page.js"></script>
+  <script src="js/jitter/Flavor.js"></script>
+  <script src="js/jitter/Roast.js"></script>
+  <script src="js/jitter/Drink.js"></script>
+  <script src="js/jitter/Body.js"></script>
+  <script src="js/jitter/Brew.js"></script>
+  <script src="js/jitter/Aroma.js"></script>
+  <script src="js/jitter/Choice.js"></script>
+  <script src="js/jitter/Coffee.js"></script>
+  <script src="js/jitter/Order.js"></script>
   <!--script src="js/wheel/flavor.v3.js"></script-->
 </head>
 <body>
