--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
   <script src="js/ui/Tocs.js"></script>
   <script src="js/ui/View.js"></script>
   <script src="js/ui/Pane.js"></script>
-  <script src="js/d3d/D3D.js"></script>
+  <script src="js/vis/Vis.js"></script>
+  <script src="js/vis/Wheel.js"></script>
   <script src="js/jitter/Jitter.js"></script>
   <script src="js/jitter/Page.js"></script>
   <script src="js/jitter/Flavor.js"></script>
