--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link href="css/flavor.css"  rel="stylesheet" type="text/css"/>
   <script src="js/lib/jquery-3.3.1.js"></script>
   <script src="js/lib/Rx.min.js"></script>
-  <script src="js/lib/d3.v3.5.17.js"></script>
+  <script src="js/lib/d3.js"></script>
   <script src="js/util/Util.js"></script>
   <script src="js/util/Stream.js"></script>
   <script src="js/ui/UI.js"></script>
