--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <script src="js/vis/Wheel.js"></script>
   <script src="js/jitter/Jitter.js"></script>
   <script src="js/jitter/Page.js"></script>
+  <script src="js/jitter/Logo.js"></script>
   <script src="js/jitter/Flavor.js"></script>
   <script src="js/jitter/Choices.js"></script>
   <script src="js/jitter/Roast.js"></script>
