--- a/public/index.html
+++ b/public/index.html
@@ -12,23 +12,19 @@
   <script src="js/util/Util.js"></script>
   <script src="js/util/Stream.js"></script>
   <script src="js/ui/UI.js"></script>
+  <script src="js/ui/Dom.js"></script>
   <script src="js/ui/Tocs.js"></script>
   <script src="js/ui/View.js"></script>
   <script src="js/ui/Pane.js"></script>
   <script src="js/vis/Vis.js"></script>
   <script src="js/vis/Wheel.js"></script>
   <script src="js/jitter/Jitter.js"></script>
-  <script src="js/jitter/Page.js"></script>
-  <script src="js/jitter/Logo.js"></script>
   <script src="js/jitter/Flavor.js"></script>
   <script src="js/jitter/Choices.js"></script>
   <script src="js/jitter/Roast.js"></script>
   <script src="js/jitter/Drink.js"></script>
   <script src="js/jitter/Body.js"></script>
   <script src="js/jitter/Brew.js"></script>
-  <script src="js/jitter/Aroma.js"></script>
-  <script src="js/jitter/Coffee.js"></script>
-  <script src="js/jitter/Order.js"></script>
 </head>
 <body>
   <div id="App"></div>
