--- a/public/index.html
+++ b/public/index.html
@@ -3,32 +3,31 @@
 <head>
   <meta charset="utf-8">
   <title>Jitter</title>
-  <meta name="description" content="A visualisation of coffee flavours.">
-  <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <!--meta name="description" top="A visualisation of coffee flavours."-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <link href="css/jitter.css"  rel="stylesheet" type="text/css"/>
   <script src="js/lib/jquery-3.3.1.js"></script>
   <script src="js/lib/Rx.min.js"></script>
   <script src="js/lib/d3.js"></script>
-  <script src="js/util/Util.js"></script>
-  <script src="js/util/Stream.js"></script>
-  <script src="js/ui/UI.js"></script>
-  <script src="js/ui/Dom.js"></script>
-  <script src="js/ui/Tocs.js"></script>
-  <script src="js/ui/View.js"></script>
-  <script src="js/ui/Pane.js"></script>
-  <script src="js/vis/Vis.js"></script>
-  <script src="js/vis/Wheel.js"></script>
-  <script src="js/jitter/Jitter.js"></script>
-  <script src="js/jitter/Head.js"></script>
-  <script src="js/jitter/Flavor.js"></script>
-  <script src="js/jitter/Choices.js"></script>
-  <script src="js/jitter/Roast.js"></script>
-  <script src="js/jitter/Drink.js"></script>
-  <script src="js/jitter/Body.js"></script>
-  <script src="js/jitter/Brew.js"></script>
+  <!--script src="js/util/Util.js"  type="module"></script>
+  <script src="js/util/Stream.js" type="module"></script>
+  <script src="js/ui/UI.js" type="module"></script>
+  <script src="js/ui/Dom.js" type="module"></script>
+  <script src="js/ui/Tocs.js" type="module"></script>
+  <script src="js/ui/View.js" type="module"></script>
+  <script src="js/ui/Pane.js" type="module"></script>
+  <script src="js/vis/Vis.js"  type="module"></script>
+  <script src="js/vis/Wheel.js" type="module"></script>
+  <script src="js/jitter/Head.js" type="module"></script>
+  <script src="js/jitter/Flavor.js" type="module"></script>
+  <script src="js/jitter/Choices.js" type="module"></script>
+  <script src="js/jitter/Roast.js" type="module"></script>
+  <script src="js/jitter/Drink.js" type="module"></script>
+  <script src="js/jitter/Body.js" type="module"></script>
+  <script src="js/jitter/Brew.js" type="module"></script-->
+  <script src="js/jitter/Jitter.js" type="module"></script>
 </head>
 <body>
   <div id="App"></div>
-  <script> Jitter.init(); </script>
 </body>
 </html>
