--- a/public/btn.html
+++ b/public/btn.html
@@ -2,14 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Jitter</title>
-  <!--meta name="description" top="A visualisation of coffee flavours."-->
+  <title>Btn</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-  <link href="css/jitter.css"  rel="stylesheet" type="text/css"/>
-  <!--script src="js/lib/jquery-3.3.1.js"></script>
-  <script src="js/lib/Rx.min.js"></script>
-  <script src="js/lib/d3.js"></script>
-  <script src="js/jitter/Jitter.js" type="module"></script-->
+  <link href="css/btn.css"  rel="stylesheet" type="text/css"/>
+  <link href="css/btn-exa.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div>
@@ -21,13 +17,8 @@
   <button class="btn-link">Button</button>
 </div>
 <div>
-  <button class="btn-push"><span>Name</span></button>
-  <button class="btn-base-default">Button</button>
   <button class="btn-cool"><i class="fa fa-arrows-alt"></i>Button</button>
-  <!--button class="btn-over"></button>
-  <button class="btn-form"></button>
-  <button class="btn-grid"></button>
-  <button class="btn-link"></button-->
+  <button class="example facebook"><i class="fa fa-arrows-alt"></i>Button</button>
 </div>
 </body>
 </html>
