--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   <link href="css/jitter.css"  rel="stylesheet" type="text/css"/>
   <script src="js/lib/jquery-3.3.1.js"></script>
-  <script src="js/lib/Rx.min.js"></script>
+  <!--script src="js/lib/Rx.min.js"></script-->
   <script src="js/lib/d3.js"></script>
   <script src="js/jitter/Jitter.js" type="module"></script>
 </head>
